--- a/components/Filter/Filter.module.scss
+++ b/components/Filter/Filter.module.scss
@@ -29,7 +29,8 @@
 
 .filterSection {
   .sectionTitle {
-    // margin: 0 0 $space-md 0;
+    padding: $space-sm 0;
+    display: block;
     color: $text;
     font-weight: $weight-semibold;
   }
@@ -45,17 +46,13 @@
 
   .rangeInputFields {
     display: flex;
+    flex-direction: column;
     gap: $space-sm;
-  }
-
-  .priceInput,
-  .rangeInput {
-    width: 50%;
   }
 
   .applyButton {
     align-self: flex-start;
-    margin-top: $space-xs;
+    margin: $space-xs 0 $space-sm 0;
   }
 }
 
